tests/contextual_typing/contextual_typing.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v-----------------
    3| function test1() {
    4|   declare function f<T>(f: (string) => T): T;
    5|   // We should be able to infer that c is string.
    6|   const c = f((a) => a);
    7|   (c: string);
    8|
    9|   let f2: (string) => string = (a) => (a: string); // ok
   10|   f2 = (b) => (b: string); // ok
   11| }
       ^


Error ----------------------------------------------------------------------------------------------------- test.js:10:9

Internal error: unconstrained tvar during tvar resolution

   10|   f2 = (b) => (b: string); // ok
               ^


Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v-----------------
   13| function test2() {
   14|   declare class Foo {
   15|     bar<T>(f: (string) => T): T
   16|   }
   17|   declare var foo: Foo;
   18|
   19|   const c = foo.bar((a) => a);
   20|   (c: string);
   21|
   22|   class Bar {
   23|     #baz<T>(f: (string) => T): T {
   24|       return f("");
   25|     }
   26|
   27|     test() {
   28|       const c = this.#baz((a) => a);
   29|       (c: string);
   30|     }
   31|   }
   32| }
       ^


Error ----------------------------------------------------------------------------------------------------- test.js:22:9

Internal error: unconstrained tvar during tvar resolution

   22|   class Bar {
               ^^^



Found 4 errors
